<resources>
    <string name="app_name">PracticeTask1</string>
    <string name="textViewDefault">0</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="reset">Reset</string>
    <string name="limitDefault">100</string>
    <string name="inputChangeLimit"></string>
    <string name="ChangeLimit">Change Limit</string>
    <string name="GoToLimit">Go To Next Page</string>
    <string name="GoToMain">Go Back</string>
</resources>